styles/global.css
html,
body {
	padding: 0;
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
	Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
	sans-serif;
}

* {
	box-sizing: border-box;
}
.outerContainer{
	min-height: 100vh;
	padding: 0 0.5rem;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	
}
.container {
	min-height: 90vh;	
	padding: 0 0.5rem;
	display: flex;
	flex-direction: column;
}
.pageMain{
	padding: 5vh 0;
	flex: 1;
	display: flex;
	flex-direction: column;
	align-items: center;
}
.infobox{
	padding-top: 5vh;
	padding-bottom: 10vh;
	display: flex;
	flex-direction: column;
	align-items: center;
}
main {
	flex: 1;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

header{
	min-height: 5vh;
	padding: 1rem 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

}
footer {
	min-height: 5vh;
	width: 100%;
	border-top: 1px solid #eaeaea;
	display: flex;
	justify-content: center;
	align-items: center;
}

footer img {
	margin-left: 0.5rem;
}

footer a {
	display: flex;
	justify-content: center;
	align-items: center;
}

a {
	color: inherit;
	text-decoration: none;
}
.email{
	height: 50px;
	text-align: center;
	line-height: 1.5;
	font-size: 1.5rem;
	margin: 0;

}

.title a {
	color: #0070f3;
	text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
	text-decoration: underline;
}

.title {
	margin: 0;
	line-height: 1.15;
	font-size: 4rem;
}

.title,
.description {
	text-align: center;
}

.description {
	line-height: 1.5;
	font-size: 1.5rem;
}

code {
	background: #fafafa;
	border-radius: 5px;
	padding: 0.75rem;
	font-size: 1.1rem;
	font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
	DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;

	max-width: 800px;
	margin-top: 3rem;
}

.card {
	margin: 1rem;
	height: 175px;
	flex-basis: 45%;
	padding: 1.5rem;
	text-align: center;
	color: inherit;
	text-decoration: none;
	border: 1px solid #eaeaea;
	border-radius: 10px;
	transition: color 0.15s ease, border-color 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
	color: #0070f3;
	border-color: #0070f3;
}

.card h3 {
	margin: 0 0 1rem 0;
	font-size: 1.5rem;
}

.card p {
	margin: 0;
	font-size: 1.25rem;
	line-height: 1.5;
}

.logo {
	height: 1em;
}

@media (max-width: 600px) {
	.grid {
		width: 100%;
		flex-direction: column;
	}
}

